fixture: annoying horizontal scroll

--- a/src/app/pages/profile-page/components/user-profile/user-profile.component.scss
+++ b/src/app/pages/profile-page/components/user-profile/user-profile.component.scss
@@ -7,7 +7,8 @@
   max-width: 20px;
 }
 
-.background-color-config{
+.background-config{
   background-color: #f5f5f5;
   height: 100%;
+  margin: 0;
 }
