--- a/src/app/pages/profile-page/components/user-profile/user-repositories/user-repositories.component.scss
+++ b/src/app/pages/profile-page/components/user-profile/user-repositories/user-repositories.component.scss
@@ -3,4 +3,10 @@
     background-color: white;
     height: fit-content;
     width: 100%;
+    h4 {
+        font-weight: bolder;
+    }
 }
+
+
+
